Sources/longhorn/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: "ingress"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: longhorn.vejlupek.org
    http:
      paths:
      - backend:
          serviceName: longhorn-frontend
          servicePort: 80
        path: /
  tls:
  - hosts:
    - longhorn.vejlupek.org
    secretName: tls-secret-le-longhorn
